[project]
name = "fastapi-app"
version = "0.1.0"
description = "Uma aplicação FastAPI de exemplo com Docker e Poetry"
authors = [
    {name = "Seu Nome",email = "seu.email@exemplo.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
